k8s/deployments/log_monitor/prometheus-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-prog
  labels:
    app: prometheus
    component: prometheus-prog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
      component: prometheus-prog
  template:
    metadata:
      name: prometheus-pod
      labels:
        app: prometheus
        component: prometheus-prog
    spec:
      containers:
      - image: podstolniy/prometheus-prog:0.0.1
        name: prometheus-prog
