k8s/deployments/log_monitor/el-srv.yml
---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  namespace: default
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
#  clusterIP: None
  type: NodePort
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
