k8s/deployments/log_monitor/fluent-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fluentd
  labels:
    app: search_engine
    component: fluentd
