k8s/deployments/log_monitor/kib-srv.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-np
spec:
  selector:
    app: kibana
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
