k8s/deployments/log_monitor/prometheus-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-prog
  labels:
    app: search_engine
    component: prometheus-prog
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: search_engine
    component: prometheus-prog
