k8s/deployments/log_monitor/kib-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-monitor-service
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  tls:
  - secretName: kibana-ingress
  rules:
  - host: "kibana.51.250.80.71.ru"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana-np
            port:
              number: 8080
