k8s/deployments/log_monitor/prometheus-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-prog
  annotations:
    kubernetes.io/ingress.allow-http: "true" # Разрешаем проброс HTTP
spec:
  ingressClassName: nginx
  #tls:
  #- secretName: ui-ingress
  rules:
  - host: "prometheus.51.250.80.71.ru"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-prog
            port:
              number: 9090
